Revert "Fixed horizontal scrollbar problem"
This reverts commit 1ce3b428194478cbefe9e11f154db04e2fc664b5.

--- a/theme/src/layout/vgrid.less
+++ b/theme/src/layout/vgrid.less
@@ -29,11 +29,15 @@
 */
 .inner-wrap.inner-wrap-header,
 .inner-wrap-footer {
-    #desinax-vgrid.grid(@columns - 1);
+    #desinax-vgrid.grid(100%);
 }
 
 .site-logo {
     display: none;
+}
+
+.right {
+    // float: right;
 }
 
 .outer-wrap {
@@ -68,9 +72,6 @@
     background-color: #bfc5d8;
 }
 
-.inner-wrap.inner-wrap-header .row {
-    // #desinax-vgrid.column(@columns - 1);
-}
 .region-header-col-1,
 .region-header-col-3 {
     #desinax-vgrid.column(5);
@@ -187,7 +188,7 @@
     }
 
     .footer-column {
-        // #desinax-vgrid.column(@columns);
+        #desinax-vgrid.column(@columns);
     }
 }
 
